# challenge-python

./: .coverage  .env  .env.example  COMPLIANCE_CS4.md  CS3.md  CS4.md  README.md  config.py  config_test.py  main.py  pyproject.toml  pytest.ini  requirements.txt  sistema_seguros.db
database/: db_setup.py  mongo_setup.py
export/: receita_mensal_prevista.csv  top_clientes_valor_segurado.csv
functions/: apolice.py  auditoria_service.py  cliente.py  dao.py  dao_mysql.py  exceptions.py  exporta_relatorios.py  logger.py  migrar_json.py  seguro.py  servicos.py  sistema.py
json/: usuarios.json
logs/: visualizar_logs.py
tests/: README.md  __init__.py  conftest.py  test_dao_extras.py  test_mongodb_persistence.py  test_mysql_persistence.py  test_regras_negocio.py  test_servicos_integracao.py  test_sistema.py
utils/: utils.py
